bug 922146 - Adds stylesheet added/removed events to actor and updates inspector panels, r=bgrins

--- a/browser/devtools/fontinspector/test/browser.ini
+++ b/browser/devtools/fontinspector/test/browser.ini
@@ -1,6 +1,8 @@
 [DEFAULT]
 support-files =
+  head.js
   browser_font.woff
   browser_fontinspector.html
 
 [browser_fontinspector.js]
+[browser_bug922146_refresh_on_stylesheet_change.js]
