--- a/browser/devtools/styleinspector/test/browser.ini
+++ b/browser/devtools/styleinspector/test/browser.ini
@@ -64,3 +64,5 @@ support-files =
   sourcemaps.scss
 [browser_computedview_original_source_link.js]
 [browser_bug946331_close_tooltip_on_new_selection.js]
+[browser_bug922146_stylesheet_changes_refresh.js]
+[browser_bug922146_stylesheet_changes_iframe_refresh.js]
