--- a/browser/devtools/layoutview/test/browser.ini
+++ b/browser/devtools/layoutview/test/browser.ini
@@ -1,4 +1,7 @@
 [DEFAULT]
+support-files =
+  head.js
 
+[browser_bug922146_refresh_on_stylesheet_change.js]
 [browser_layoutview.js]
 skip-if = true
